# claude-prompt-editor

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-15-claude-prompt-editor.md
docs/superpowers/specs/: 2026-03-15-claude-prompt-editor-design.md
prompts/: cli-tool-builder.md  code-review.md  commit-message-writer.md  data-extractor.md  pr-description.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file.rs  lint.rs  mcp.rs  mod.rs  preset.rs  prompt.rs  version.rs
src-tauri/src/linter/: antipatterns.rs  config.rs  mod.rs  rules.rs  structural.rs
src-tauri/src/mcp/: server.rs  tools.rs
src-tauri/src/parser/: ast.rs  frontmatter.rs  mod.rs  serializer.rs  variables.rs  xml_tags.rs
src-tauri/src/preset/: builtin.rs  custom.rs  mod.rs  templates.rs
src-tauri/src/version/: diff.rs  mod.rs  store.rs
src/lib/: tauri.ts  types.ts
src/lib/components/: StatusBar.svelte
src/lib/components/Blocks/: Block.svelte  ExamplesBlock.svelte  FreeformBlock.svelte  MetadataBlock.svelte  TaggedBlock.svelte
src/lib/components/Dialogs/: NewPromptWizard.svelte  PresetPalette.svelte
src/lib/components/Editor/: EditorTabs.svelte  SourceEditor.svelte  StructureEditor.svelte
src/lib/stores/: editor.ts  files.ts  lint.ts  presets.ts  prompt.ts  version.ts
(+3 files in other folders)
