[package]
name = "claude-prompt-editor"
version = "0.1.0"
description = "Claude Prompt Editor"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_prompt_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"

[dev-dependencies]
tempfile = "3"
